tests/pass/LeftSign.java
package pass;

public class LeftSign {

    public int LeftSign(int x , int y) {
        return x << y ;
    } 
}