tests/fail/LeftSign.java
package fail;

public class LeftSign {

    public static void main(String[] args) {
        return 4 << "Hej";
        
    } 
}